# Cockpit.EntertainmentClusterUnit

./: .gitignore  CMakeLists.txt  README.md  test_can.sh
.github/workflows/: ci-release.yml  ci.yml  release.yml
apps/cluster/: CMakeLists.txt  UpdateManager.cpp  UpdateManager.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
apps/cluster/models/: ClusterModel.cpp  ClusterModel.hpp
apps/cluster/widgets/: ArcGaugeWidget.cpp  ArcGaugeWidget.hpp  GaugeWidget.cpp  GaugeWidget.hpp  IndicatorWidget.cpp  IndicatorWidget.hpp
core/can_interface/: CMakeLists.txt
core/can_interface/include/: CANInterface.hpp  SocketCANInterface.hpp  StubCANInterface.hpp  can_frame_stub.hpp
core/can_interface/src/: CANInterface.cpp  SocketCANInterface.cpp  StubCANInterface.cpp
scripts/: cluster-kiosk.service  cluster-update.service  install.sh  update.sh
tests/: CMakeLists.txt  ClusterModelTest.cpp
